# projects-showcase-api

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  docker-compose.yaml  k8s.yml
.buildkite/: authenticate.sh  build-and-push.sh  deploy.sh  pipeline.yml
src/: api.rs  db.rs  main.rs
src/migrations/: V1__create_projects.sql
src/sql/: select-all-projects.sql
src/sql/migrations/: V1__create_projects.sql
