[package]
name = "projects-showcase-api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
rocket = { version = "0.5.1", features = ["secrets", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
postgres = { version = "0.19", features = ["with-uuid-1", "with-serde_json-1"] }
log = "0.4"
env_logger = "0.10"

[default]
port = 8080

[default.databases]
projects-showcase = { url = "@DATABASE_URL" }